--- a/mockdowns/qa/qa_2025-12-17.md
+++ b/mockdowns/qa/qa_2025-12-17.md
@@ -4,11 +4,13 @@
 
 **질문**: `PORT=5174 node server.js` 실행 시 `'PORT'은(는) 내부 또는 외부 명령...` 에러가 발생해요
 
-**답변**: 
+**답변**:
+
 - Windows에서는 `VAR=value command` 형식의 Unix 스타일 환경변수 설정이 작동하지 않음
 - `cross-env` 패키지를 설치하고 스크립트를 수정해야 함
 
 **해결 방법**:
+
 ```bash
 pnpm add -D cross-env
 ```
@@ -29,10 +31,12 @@ pnpm add -D cross-env
 **질문**: `Delete ␍` 에러가 전체 파일에서 발생해요 (Mac/Windows 차이)
 
 **답변**:
+
 - Windows는 CRLF(`\r\n`), Mac/Linux는 LF(`\n`) 사용
 - Prettier 설정에서 `endOfLine` 옵션으로 해결
 
 **해결 방법**:
+
 ```json
 // .prettierrc
 {
@@ -51,10 +55,12 @@ pnpm add -D cross-env
 **질문**: `playwright test 'basic'` 실행 시 "No tests found" 에러 발생
 
 **답변**:
+
 - Windows에서 작은따옴표(`'`) 패턴 매칭이 제대로 작동하지 않음
 - 파일 경로를 직접 지정하는 방식으로 해결
 
 **해결 방법**:
+
 ```json
 // package.json
 "test:e2e:basic": "playwright test e2e/e2e-basic.spec.ts"
@@ -66,3 +72,37 @@ pnpm add -D cross-env
 
 ---
 
+## Q4. Express 5 와일드카드 라우트 에러
+
+**질문**: `app.get("*", ...)` 사용 시 `Missing parameter name` 에러 발생
+
+**답변**:
+
+- Express 5는 `path-to-regexp` 8.x 사용
+- 와일드카드에 **반드시 이름**이 필요함
+- `"*"`, `"/*"` 모두 안 됨
+- `"*all"`, `"*path"` 처럼 이름을 붙여야 함
+
+**해결 방법**:
+
+```javascript
+// Express 4 (이전)
+app.get("*", (req, res) => { ... });
+
+// Express 5 (현재) - 이름 있는 와일드카드
+app.get("*all", (req, res) => { ... });
+// 또는
+app.get("*path", (req, res) => { ... });
+```
+
+**왜 `*all`이 동작하나?**
+
+- `*` = 와일드카드 (0개 이상의 경로)
+- `all` = 파라미터 이름
+- `req.params.all`로 매칭된 경로 접근 가능
+
+**관련 스텝**: STEP 01 (Express SSR 서버)
+
+**키워드**: `Express 5`, `path-to-regexp 8.x`, `와일드카드`, `*all`
+
+---
